# lcmodel_pyport

./: .gitignore  README.md  pyproject.toml
docs/: prompt_playbook.md  ps_visual_inspection.md  session_handoff_2026-03-10.md  step1_routine_inventory.tsv  step1_source_baseline.md  step2_program_flow_function_breakdown.md  step4_execution_behavior.md  step5_cli_manual_crosscheck.md  step6_porting_functional_specs.md  step7_test_harness_tdd_outline.md  step8_python_architecture_proposal.md  step9_scientific_port_completion_plan.md
src/lcmodel_pyport/: __init__.py
src/lcmodel_pyport/config/: __init__.py  change_log.py  control_parser.py  defaults.py  models.py
src/lcmodel_pyport/core/: __init__.py  errors.py  indexing.py
src/lcmodel_pyport/fit/: __init__.py  fullfit_engine.py  prelim_engine.py  regularization.py  snapshots.py  solver_linear.py
src/lcmodel_pyport/io/: __init__.py  basis_reader.py  namelist_utils.py  (+1 more)
tests/: test_contract_parsers.py  test_evidence_external_dataset.py  test_fixture_registry.py  test_gate_g1_phase_a.py  test_gate_g2_g3_numeric_progress.py  test_gate_g2_phase_b.py  test_gate_g3_basis_payloads.py  test_gate_g4_computed_engines.py  test_gate_g4_phase_c.py  test_gate_g5_output_stage.py  test_gate_g5_output_stage_computed.py  test_gate_g5_report_writers.py  test_gate_g6_orchestrator_computed_mode.py  test_gate_g6_orchestrator_reference_mode.py  test_gate_g7_error_robustness.py  test_numerical_kernels_suite_e_f.py  test_ps_input_checkpoint_parity.py  test_scientific_parity_compare_only.py  test_scientific_parity_strict_gaps.py
(+38 files in other folders)
