[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lcmodel-pyport"
version = "0.1.0"
description = "LCModel CLI Python port (spec-driven scaffold)"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q -p no:cacheprovider"
